<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:textSize="30sp"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/contentDescr" />

    <Button
        android:id="@+id/Connect_passerelle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/Register_passerelle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bouton_register"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"

        />

    <Button
        android:id="@+id/Credits"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bouton_credits"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />




</LinearLayout>