<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/account"
        android:contentDescription="@string/contentDescr3" />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/identifiant"
        />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="1"
        android:hint="@string/HintId"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/et_mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="1"
        android:hint="@string/PasswordHint"
        android:maxEms="25"
        android:password="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/Connect_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendConnexionInfo"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        />


</LinearLayout>