<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:text="@string/app_name"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:textSize="30sp"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/contentDescr" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction2"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_autor"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor2"
        android:layout_marginTop="35dp"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />




    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/cs_logo"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescr" />










</LinearLayout>